[package]
name = "toy-blockchain-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
interprocess = "2.0.1"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"

[dev-dependencies]
assertables = "7.0.1"
duct = "0.13.7"
ntest = "0.9.2"
proptest = "1.4.0"
